--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ./src --ext js,jsx --quiet --fix",
-    "build": "babel src/ -d lib/",
+    "build": "babel src/ -d lib",
     "prepublish": "yarn run build",
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "react": "17.0.2",
     "react-native": "0.68.0"
   },
@@ -24,7 +25,14 @@
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.70.0",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "@babel/cli": "^7.16.8",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-env": "^7.16.10",
+    "@babel/preset-flow": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "babel-plugin-module-resolver": "^4.1.0"
   },
   "jest": {
     "preset": "react-native"
