--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
-          npm install
-      - name: Run tests
-        run: |
-          npm test
+          yarn
   build-android:
     needs: install-and-test
     runs-on: ubuntu-latest
