--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ./src --ext js,jsx --quiet --fix",
-    "build": "babel src/ -d lib",
+    "build": "babel src/ -d lib/",
     "prepublish": "yarn run build",
     "precommit": "lint-staged"
   },
