--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build Android and iOS
+name: Build Android
 on:
   push:
     branches:
@@ -24,11 +24,6 @@ jobs:
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease -PMYAPP_UPLOAD_STORE_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}' -PMYAPP_UPLOAD_KEY_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}'
-      # - name: Upload Artifact
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: app-release.apk
-      #     path: android/app/build/outputs/apk/release/
       - id: set_var
         run: |
           content=`cat ./package.json`
@@ -42,8 +37,8 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
+          automatic_release_tag: "v${{ fromJson(steps.set_var.outputs.packageJson).version }}"
+          prerelease: false
           title: "v${{ fromJson(steps.set_var.outputs.packageJson).version }}"
           files: |
             android/app/build/outputs/apk/release/app-release.apk
