--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -1,9 +1,10 @@
 name: IOS Production Build
-
 on:
-  workflow_dispatch:
-  release:
-    types: [published] # only run the workflow when a new release has been published
+  push:
+    branches:
+      - master
+      - main
+      - development
 
 jobs:
   ios-build:
