--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ./src --ext js,jsx --quiet --fix",
+    "lint": "eslint .",
     "build": "babel src/ -d lib/",
     "prepublish": "yarn run build",
     "precommit": "lint-staged"
@@ -18,21 +18,22 @@
     "react-native": "0.68.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/runtime": "^7.17.8",
-    "@react-native-community/eslint-config": "^3.0.1",
-    "babel-jest": "^27.5.1",
-    "eslint": "^8.12.0",
-    "jest": "^27.5.1",
-    "metro-react-native-babel-preset": "^0.70.0",
-    "react-test-renderer": "17.0.2",
     "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.17.8",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-env": "^7.16.10",
     "@babel/preset-flow": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "@babel/runtime": "^7.17.8",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "babel-jest": "^27.5.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-flowtype": "8.0.3",
+    "jest": "^27.5.1",
+    "metro-react-native-babel-preset": "^0.70.0",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
