--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,6 +82,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -277,6 +278,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    compile project(':react-native-code-push')
 }
 
 if (isNewArchitectureEnabled()) {
