--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "react": "17.0.2",
-    "react-native": "0.68.0"
+    "react-native": "0.68.0",
+    "react-native-code-push": "^7.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
