--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -5,6 +5,7 @@ on:
       - master
       - main
       - development
+      - feature/testSlack
 jobs:
   install-and-test:
     runs-on: ubuntu-latest
@@ -17,28 +18,39 @@ jobs:
     needs: install-and-test
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v2
-      - name: Install npm dependencies
-        run: |
-          yarn
-      - name: Build Android Release
-        run: |
-          cd android && ./gradlew assembleRelease -PMYAPP_UPLOAD_STORE_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}' -PMYAPP_UPLOAD_KEY_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}'
-      - id: set_var
-        run: |
-          content=`cat ./package.json`
-          # the following lines are only required for multi line json
-          content="${content//'%'/'%25'}"
-          content="${content//$'\n'/'%0A'}"
-          content="${content//$'\r'/'%0D'}"
-          # end of optional handling for multi line json
-          echo "::set-output name=packageJson::$content"
-      - name: "Release"
-        uses: "marvinpinto/action-automatic-releases@latest"
+      # - uses: actions/checkout@v2
+      # - name: Install npm dependencies
+      #   run: |
+      #     yarn
+      # - name: Build Android Release
+      #   run: |
+      #     cd android && ./gradlew assembleRelease -PMYAPP_UPLOAD_STORE_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}' -PMYAPP_UPLOAD_KEY_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}'
+      # - id: set_var
+      #   run: |
+      #     content=`cat ./package.json`
+      #     # the following lines are only required for multi line json
+      #     content="${content//'%'/'%25'}"
+      #     content="${content//$'\n'/'%0A'}"
+      #     content="${content//$'\r'/'%0D'}"
+      #     # end of optional handling for multi line json
+      #     echo "::set-output name=packageJson::$content"
+      # - name: "Release"
+        # uses: "marvinpinto/action-automatic-releases@latest"
+        # with:
+        #   repo_token: "${{ secrets.TOKEN }}"
+        #   automatic_release_tag: "v${{ fromJson(steps.set_var.outputs.packageJson).version }}"
+        #   prerelease: false
+        #   title: "v${{ fromJson(steps.set_var.outputs.packageJson).version }}"
+        #   files: |
+        #     android/app/build/outputs/apk/release/app-release.apk
+      - name: Post to a Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.19.0
         with:
-          repo_token: "${{ secrets.TOKEN }}"
-          automatic_release_tag: "v${{ fromJson(steps.set_var.outputs.packageJson).version }}"
-          prerelease: false
-          title: "v${{ fromJson(steps.set_var.outputs.packageJson).version }}"
-          files: |
-            android/app/build/outputs/apk/release/app-release.apk
+          # Slack channel id, channel name, or user id to post message.
+          # See also: https://api.slack.com/methods/chat.postMessage#channels
+          channel-id: 'CHANNEL_ID'
+          # For posting a simple plain text message
+          slack-message: "-Этот чат захвачен ботами\n-Сейчас или вообще?"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
