--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -7,15 +7,15 @@ on:
       - development
       - feature/testSlack
 jobs:
-  install-and-test:
-    runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v2
-      - name: Install npm dependencies
-        run: |
-          yarn
+  # install-and-test:
+  #   runs-on: ubuntu-latest
+  #   steps: 
+  #     - uses: actions/checkout@v2
+  #     - name: Install npm dependencies
+  #       run: |
+  #         yarn
   build-android:
-    needs: install-and-test
+    #needs: install-and-test
     runs-on: ubuntu-latest
     steps: 
       # - uses: actions/checkout@v2
@@ -49,7 +49,7 @@ jobs:
         with:
           # Slack channel id, channel name, or user id to post message.
           # See also: https://api.slack.com/methods/chat.postMessage#channels
-          channel-id: 'CHANNEL_ID'
+          channel-id: 'C02Q7CXQV37'
           # For posting a simple plain text message
           slack-message: "-Этот чат захвачен ботами\n-Сейчас или вообще?"
         env:
