--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -1,78 +1,75 @@
-name: Build IOS
-on:
-  push:
-    branches:
-      - master
-      - main
-      - development
-      - feature/testSlack
-jobs:
-  ios-build:
-    name: IOS Build
-    runs-on: macos-latest
-    defaults:
-      run:
-        working-directory: ios
+# name: Build IOS
+# on:
+#   push:
+#     branches:
+#       - master
+#       - main
+#       - development
 
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
+# jobs:
+#   ios-build:
+#     name: IOS Build
+#     runs-on: macos-latest
+#     defaults:
+#       run:
+#         working-directory: ios
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+#     steps:
+#       - name: Check out Git repository
+#         uses: actions/checkout@v2
 
-      - name: Restore node_modules from cache
-        uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+#       - name: Get yarn cache directory path
+#         id: yarn-cache-dir-path
+#         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Install dependencies
-        run: yarn install --network-timeout 300000
+#       - name: Restore node_modules from cache
+#         uses: actions/cache@v2
+#         id: yarn-cache
+#         with:
+#           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+#           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+#           restore-keys: |
+#             ${{ runner.os }}-yarn-
 
-      - name: Setup Ruby (bundle)
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7.4
-          bundler-cache: true
+#       - name: Install dependencies
+#         run: yarn install --network-timeout 300000
 
-      - name: Restore Pods cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ios/Pods
-            ~/Library/Caches/CocoaPods
-            ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
+#       - name: Setup Ruby (bundle)
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: 2.7.4
+#           bundler-cache: true
 
-      - name: Install Pods
-        run: npx pod-install
-      - id: set_var_two
-        run: |
-          APP_BUILD_NO=`sed -n '/CURRENT_PROJECT_VERSION/{s/CURRENT_PROJECT_VERSION = //;s/;//;s/^[[:space:]]*//;p;q;}' ./ios/ReactNativeTestProject.xcodeproj/project.pbxproj`
-          echo "::set-output name=test2::$APP_BUILD_NO"
-      # - name: Build IOS App
-      #   uses: yukiarrr/ios-build-action@v1.5.0
-      #   with:
-      #     project-path: ios/ReactNativeTestProject.xcodeproj
-      #     p12-base64: ${{ secrets.IOS_P12_BASE64 }}
-      #     mobileprovision-base64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
-      #     code-signing-identity: 'iPhone Distribution'
-      #     team-id: ${{ secrets.IOS_TEAM_ID }}
-      #     certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-      #     workspace-path: ios/ReactNativeTestProject.xcworkspace
-      #     scheme: ReactNativeTestProject
+#       - name: Restore Pods cache
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             ios/Pods
+#             ~/Library/Caches/CocoaPods
+#             ~/.cocoapods
+#           key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+#           restore-keys: |
+#             ${{ runner.os }}-pods-
 
-      # - name: 'Upload app to TestFlight'
-      #   uses: apple-actions/upload-testflight-build@v1
-      #   with:
-      #     app-path: 'output.ipa'
-      #     issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-      #     api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-      #     api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+#       - name: Install Pods
+#         run: npx pod-install
+
+#       - name: Build IOS App
+#         uses: yukiarrr/ios-build-action@v1.5.0
+#         with:
+#           project-path: ios/ReactNativeTestProject.xcodeproj
+#           p12-base64: ${{ secrets.IOS_P12_BASE64 }}
+#           mobileprovision-base64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
+#           code-signing-identity: 'iPhone Distribution'
+#           team-id: ${{ secrets.IOS_TEAM_ID }}
+#           certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+#           workspace-path: ios/ReactNativeTestProject.xcworkspace
+#           scheme: ReactNativeTestProject
+
+#       - name: 'Upload app to TestFlight'
+#         uses: apple-actions/upload-testflight-build@v1
+#         with:
+#           app-path: 'output.ipa'
+#           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+#           api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
+#           api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
