--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -27,14 +27,9 @@ jobs:
           echo "::set-output name=packageJson::$content"
       - id: set_var_two
         run: |
-          content=`cat ./package.json`
-          # the following lines are only required for multi line json
-          content="${content//'%'/'%25'}"
-          content="${content//$'\n'/'%0A'}"
-          content="${content//$'\r'/'%0D'}"
-          # end of optional handling for multi line json
           content2=`cat ./ios/ReactNativeTestProject.xcodeproj/project.pbxproj | grep -m1 'MARKETING_VERSION' | cut -d'=' -f2 | tr -d ';' | tr -d ' '`
-          echo "::set-output name=packageJson2::$content2"
+          echo "$content2"
+          xcodebuild -showBuildSettings | grep MARKETING_VERSION | tr -d 'MARKETING_VERSION ='
       - name: "Release"
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
