--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -28,8 +28,11 @@ jobs:
       - id: set_var_two
         run: |
           content2=`cat ./ios/ReactNativeTestProject.xcodeproj/project.pbxproj | grep -m1 'MARKETING_VERSION' | cut -d'=' -f2 | tr -d ';' | tr -d ' '`
+          content3=`sed -n '/MARKETING_VERSION/{s/MARKETING_VERSION = //;s/;//;s/^[[:space:]]*//;p;q;}' ReactNativeTestProject.xcodeproj/project.pbxproj`
           echo "$content2"
-          xcodebuild -showBuildSettings | grep MARKETING_VERSION | tr -d 'MARKETING_VERSION ='
+          echo "$content3"
+          echo "::set-output name=packageJson2::$content2"
+          echo "::set-output name=packageJson3::$content3"
       - name: "Release"
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
